Created 2 more sections

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -34,49 +34,78 @@
 		DOWNLOAD OUR PITCH DECK
 	</div>
 </div> <!-- /site_menu -->
-<section id="home_theater">
-	<ul class="theater_list">
-		<li class="active">
-			<div class="theater_bkg_img" style="background-image: url(images/hero_img1.jpg);"></div>
-			<div class="theater_content">
-				<h2 class="theater_content_title">
-					WHO ARE WE?
-				</h2>
-				<div class="theater_content_message">
-					LIKE YOU, WE ARE ADVOCATES FOR A <span>BETTER WORLD.</span>
-				</div>
-				<div class="theater_content_impact">
-					Create an account. Find a charity or fundraising campaign that aligns with your values &mdash; you can search for specific organizations or browse categories. Then specify the amount you'd like to donate. No amount is too small when you're fighting the good fight.
-				</div>
-			</div> <!-- /theater_content -->
-		</li>
-		<li>
-			<div class="theater_bkg_img" style="background-image: url(images/hero_img2.jpg);"></div>
-			<div class="theater_content">
-				<h2 class="theater_content_title">
-					HOW, YOU ASK?
-				</h2>
-				<div class="theater_content_message">
-					We understand that you have a unique outlook
-				</div>
-				<div class="theater_content_impact">
-					and we've created donation hub with that in mind. We work with a multitude of non-profits and charities to give you a variety of causes to empower &dash; all in one place, 'cause we know how important your time is.
-				</div>
-			</div> <!-- /theater_content -->
-		</li>
-		<li>
-			<div class="theater_bkg_img" style="background-image: url(images/hero_img3.jpg);"></div>
-			<div class="theater_content">
-				<h2 class="theater_content_title">
-					AWESOME! WHAT'S NEXT?
-				</h2>
-				<div class="theater_content_message">
-					HERE'S HOW IT WORKS.
-				</div>
-				<div class="theater_content_impact">
-					Create an account. Find a charity or fundraising campaign that aligns with your values &mdash; you can search for specific organizations or browse categories. Then specify the amount you'd like to donate. No amount is too small when you're fighting the good fight.
-				</div>
-			</div> <!-- /theater_content -->
-		</li>
-	</ul> <!-- /theater_list -->
-</section>
+	<section id="home_theater">
+		<ul class="theater_list">
+			<li>
+				<div class="theater_bkg_img" style="background-image: url(i/hero_img1.jpg);"></div>
+				<div class="action_text">conserve wildlife</div>
+				<div class="theater_content">
+					<h2 class="theater_content_title">
+						WHO ARE WE?
+					</h2>
+					<div class="theater_content_message">
+						LIKE YOU, WE ARE ADVOCATES FOR A <span>BETTER WORLD.</span>
+					</div>
+					<div class="theater_content_impact">
+						Create an account. Find a charity or fundraising campaign that aligns with your values &mdash; you can search for specific organizations or browse categories. Then specify the amount you'd like to donate. No amount is too small when you're fighting the good fight.
+					</div>
+				</div> <!-- /theater_content -->
+				<div class="scroll_indicator"></div>
+			</li>
+			<li>
+				<div class="theater_bkg_img" style="background-image: url(i/hero_img2.jpg);"></div>
+				<div class="action_text">provide clean water</div>
+				<div class="theater_content">
+					<h2 class="theater_content_title">
+						HOW, YOU ASK?
+					</h2>
+					<div class="theater_content_message">
+						We understand that you have a unique outlook
+					</div>
+					<div class="theater_content_impact">
+						and we've created donation hub with that in mind. We work with a multitude of non-profits and charities to give you a variety of causes to empower &dash; all in one place, 'cause we know how important your time is.
+					</div>
+				</div> <!-- /theater_content -->
+			</li>
+			<li>
+				<div class="theater_bkg_img" style="background-image: url(i/hero_img3.jpg);"></div>
+				<div class="action_text">protect the envoronment</div>
+				<div class="theater_content">
+					<h2 class="theater_content_title">
+						AWESOME! WHAT'S NEXT?
+					</h2>
+					<div class="theater_content_message">
+						HERE'S HOW IT WORKS.
+					</div>
+					<div class="theater_content_impact">
+						Create an account. Find a charity or fundraising campaign that aligns with your values &mdash; you can search for specific organizations or browse categories. Then specify the amount you'd like to donate. No amount is too small when you're fighting the good fight.
+					</div>
+				</div> <!-- /theater_content -->
+			</li>
+		</ul> <!-- /theater_list -->
+		<ul class="slide_index"></ul>
+		<div class="slide_action">
+			<div class="site_contain">
+				I WANT TO: <span></span>
+				<div class="slide_action_btn"></div>
+			</div>
+		</div>
+	</section> <!-- /home_theater -->
+	<section id="for_non-profits">
+		<div class="section_contain">
+			<h2 class="section_title">for non-profits</h2>
+			<div class="section_content">
+				We <span style="color:#32d6d8">&#10084;</span> you guys! We want to partner with you and help ignite your movement. Find out what we can do to super-charge your cause by increasing your brand awarness and getting people to participate.
+				<a class="learn_more_btn">LEARN MORE</a>
+			</div>
+		</div> <!-- /section_contain -->
+	</section> <!-- /for_non-profits -->
+	<section id="sponsors">
+		<div class="section_contain">
+			<h2 class="section_title">sponsors</h2>
+			<div class="section_content">
+				sed ut perspiciatis unde omnis iste natus error sit voluptatem dolar accusantium doloremque laudantium, totam rem aperiam eaquenn ipsa.
+				<a class="learn_more_btn">LEARN MORE</a>
+			</div>
+		</div> <!-- /section_contain -->
+	</section> <!-- /for_non-profits -->
