--- a/public/static/css/site.less
+++ b/public/static/css/site.less
@@ -108,8 +108,9 @@ img{max-width: 100%;}
 				font-size: 1.1em;
 				border: none;
 				border-bottom: 1px solid #ddd;
-				padding: .3em 0;
-				width: calc(~"100% - .6em");
+				padding: .3em;
+				margin: .1em;
+				width: calc(~"100% - .9em");
 			}
 			&[type="submit"]{
 				.learn_more_btn;
@@ -122,9 +123,12 @@ img{max-width: 100%;}
 			font-size: 1em;
 			border: none;
 			border-bottom: 1px solid #ddd;
-			padding: .3em 0;
+			padding: .3em;
+			margin: .1em;
 			font-family: @primary_font;
-			width: calc(~"100% - .6em");
+			width: calc(~"100% - .9em");
+			max-width: calc(~"100% - .9em");
+			min-width: calc(~"100% - .9em");
 		}
 	}
 }
